@@ -1,0 +1,50 @@
+<?php
+/* vim: set expandtab tabstop=4 shiftwidth=4 softtabstop=4: */
+/**
+ * Represents a language pack.
+ *
+ * LICENSE: This source file is subject to version 3.0 of the GNU Lesser General
+ * Public License that is available through the world-wide-web at the following URI:
+ * http://www.gnu.org/licenses/lgpl.html. If you did not receive a copy of
+ * the GNU Lesser General Public License and are unable to obtain it through the web,
+ * please send a note to gnu@gnu.org, or send an email to any of the file's authors
+ * so we can email you a copy.
+ *
+ * @package		Mls
+ * @author		NGUYEN, Ba Thanh <btnguyen2k@gmail.com>
+ * @copyright	2008 DDTH.ORG
+ * @license    	http://www.gnu.org/licenses/lgpl.html  LGPL 3.0
+ * @id			$Id$
+ * @since      	File available since v0.1
+ */
+
+/**
+ * Represents a language pack.
+ *
+ * This interface represents a single language pack.
+ *
+ * @package    	Mls
+ * @author     	NGUYEN, Ba Thanh <btnguyen2k@gmail.com>
+ * @copyright	2008 DDTH.ORG
+ * @license    	http://www.gnu.org/licenses/lgpl.html  LGPL 3.0
+ * @version    	0.1
+ * @since      	Class available since v0.1
+ */
+interface Ddth_Mls_ILanguage {
+    /**
+     * Gets a text message from this language.
+     * 
+     * @param string key of the text message to get
+     * @param Array() replacements for place-holders within the text message 
+     * @return string
+     */
+    public function getMessage($key, $replacements=NULL);
+    
+    /**
+     * Gets name of the language pack.
+     * 
+     * @return string
+     */
+    public function getName();
+}
+?>
