@@ -1,3 +1,7 @@
+* 28-Feb-2008: version 0.1_4
+	- Introduced package MessageFormat module:
+		+ Class(es): MessageFormat
+
 * 11-Feb-2008: version 0.1_3
 	- Introduced package Ddth::Commons::Logging:
 		+ Interface(s): ILog
